--- a/css/style.css
+++ b/css/style.css
@@ -339,23 +339,28 @@ button {
 	content: url("../img/Earth.png");
 	top: 15px;
 }
+/*.about-from:after {*/
+/*	position: absolute;*/
+/*	content: "";*/
+/*	border-right: 2px solid #ff5656;*/
+/*	border-top: 2px solid #ff5656;*/
+/*	padding: 8px;*/
+/*	transform: rotate(-45deg);*/
+/*	right: 35px;*/
+/*	top: 40px;*/
+/*}*/
 .about-from:after {
 	position: absolute;
 	content: "";
-	border-right: 2px solid #ff5656;
-	border-top: 2px solid #ff5656;
-	padding: 8px;
-	transform: rotate(-45deg);
+	display: block;
+	height: 10px;
+	width: 10px;
+	border-bottom: 2px solid #ff5656;
+	border-left: 2px solid #ff5656;
+	transform: rotate(135deg);
 	right: 35px;
 	top: 40px;
 }
-/*.about-rotate:after {*/
-/*	position: absolute;*/
-/*	content: url("../img/btn.png");*/
-/*	right: 35px;*/
-/*	top: 40px;*/
-/*	transform: rotate(180deg);*/
-/*}*/
 .about-from h3 {
 	color: #585858;
 	font-size: 23px;
