--- a/css/style.css
+++ b/css/style.css
@@ -339,17 +339,7 @@ button {
 	content: url("../img/Earth.png");
 	top: 15px;
 }
-/*.about-from:after {*/
-/*	position: absolute;*/
-/*	content: "";*/
-/*	border-right: 2px solid #ff5656;*/
-/*	border-top: 2px solid #ff5656;*/
-/*	padding: 8px;*/
-/*	transform: rotate(-45deg);*/
-/*	right: 35px;*/
-/*	top: 40px;*/
-/*}*/
-.info .about-from:after {
+.about-from:after {
 	position: absolute;
 	content: "";
 	display: block;
@@ -360,12 +350,8 @@ button {
 	transform: rotate(135deg);
 	right: 35px;
 	top: 40px;
-	transition: 1s ease-in-out;
+	transition: .5s ease-in-out;
 }
-.info.info-open .about-from:after{
-	transform: rotate(-45deg);
-}
-
 .about-from h3 {
 	color: #585858;
 	font-size: 23px;
@@ -411,13 +397,14 @@ button {
 	text-align: center;
     align-items: center;
 	cursor: pointer;
-	transition: 1s ease-in-out;
+	transition: .5s ease-in-out;
 }
-
+.info.info-open .about-from:after{
+	transform: rotate(-45deg);
+}
 .info.info-open{
 	bottom: 0;
 }
-
 .info p {
 	position: absolute;
 	top: 110px;
